fix roadmap scrollbar for the safari 5th try

--- a/src/components/roadmap/style.css
+++ b/src/components/roadmap/style.css
@@ -8,6 +8,7 @@
 
 .scroll-container::-webkit-scrollbar-thumb {
     background-color: #0df69e;
+    color: #0df69e;
     border-radius: 2px;
     border: transparent;
   }
